# todo-clean-architecture-sample

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  sonar-project.properties  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
src/todo_sample/entities/: todo.py
src/todo_sample/repository/: exception.py  todo_repository.py
src/todo_sample/use_cases/: create_todo.py  delete_todo.py  exceptions.py  get_todo.py  get_todos.py  update_todo.py
tests/: test_hello.py
tests/entities/: test_todo.py
tests/use_cases/: test_create_todo.py  test_delete_todo.py  test_exceptions.py  test_get_todo.py  test_get_todos.py  test_update_todo.py
todo_sample/: hello.py
