[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "todo-sample"
version = "0.1.0"
description = "Simple Todo clean architecture application"
readme = "README.md"
authors = ["Thomas TRAN <17247405+Oltho@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/Oltho/todo-clean-architecture-sample"
homepage = "https://github.com/Oltho/todo-clean-architecture-sample"

classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
deepdiff = "^5.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pytest-mock = "~=3.6.1"
safety = "^1.10.3"
bandit = "^1.7.0"

flake8 = "^4.0.1"
isort = "^5.10.0"
black = "^21.10b0"

mypy = "^0.910"
types-toml = "^0.10.1"

# [tool.pytest.ini_options]
# # https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# addopts = "--cov todo_sample --cov-report term-missing --verbose"
# norecursedirs = [
#     "dist",
#     "build",
#     ".tox",
#     "venv"
# ]
# testpaths = ["tests"]


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files.html#pyprojecttoml-preferred-format
py_version = 37
line_length = 120
profile = "black"

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.7

files = "src/todo_sample, tests"

pretty = true
color_output = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_no_return = true
warn_return_any = true

[too.mypy.overrides]
module = 'deepdiff'
ignore_missing_imports = true

[tool.black]
target-version = ["py37"]
line-length = 120
color = true

extend-exclude = '''
.git
.mypy_cache
.tox
dist
build
venv
'''
