[metadata]
name = todo_sample
version = attr: todo_sample.__version__
url = https://github.com/Oltho/todo-clean-architecture-sample
description = Simple Todo clean architecture application

author = Oltho
author_email = 17247405+Oltho@users.noreply.github.com

license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

project_urls =
    Source = https://github.com/Oltho/todo-clean-architecture-sample
    # Documentation = https://pyscaffold.org/
    # Changelog = https://pyscaffold.org/en/latest/changelog.html
    # Download = https://pypi.org/project/PyScaffold/#files

platforms = any

classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Programming Language :: Python :: 3.7


[options]
python_requires = >=3.7
zip_safe = False

packages = find:
include_package_data = True
package_dir =
    = src

install_requires =
    pydantic~=1.8.2

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
testing =
    setuptools
    pytest~=6.2.5
    pytest-cov~=3.0.0
    python-mock~=3.6.1

security-check =
    safety~=1.10.3
    bandit~=1.7.0

lint =
    flake8~=4.0.1
    isort~=5.10.0
    black~=21.10b0
    mypy~=0.910

all =
    %(testing)s
    %(security-check)s
    %(lint)s


[tool:pytest]
addopts = --cov todo_sample --cov-report term-missing --verbose
norecursedirs =
    dist
    build
    .tox
    venv
testpaths = tests

[mypy]
python_version = 3.7

files = src/todo_sample, tests

pretty = True
color_output = True
show_error_context = True
show_column_numbers = True
show_error_codes = True
warn_redundant_casts = True
warn_no_return = True
warn_return_any = True

[isort]
py_version = 37
line_length = 120
profile = black

[flake8]
max-line-length = 120
exclude =
    venv
    __pycache__
    .git
    .tox
    build
    dist
    .eggs
